# ccsession

./: .gitignore  README.md  pyproject.toml  requirements.txt
ccsession/: __init__.py  __main__.py  cli.py  constants.py  output.py  paths.py  restore.py  utils.py
ccsession/export/: __init__.py  collectors.py  exporter.py  formatters.py  manifest.py  parsers.py  session_discovery.py  trajectory.py
ccsession/importing/: __init__.py  auxiliary.py  config.py  import_log.py  importer.py  session_io.py  snapshot.py  uuids.py  validation.py
tests/: test_ccsession_paths.py  test_ccsession_utils.py  test_cli_verbosity.py  test_edge_cases.py  test_exception_handling.py  test_find_project_sessions.py  test_import_session.py  test_output.py  test_restore_backup.py  test_trajectory.py
